--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,16 @@ h1 {
   text-decoration: none;
 }
 
+.active {
+  font-weight: bold;
+  color: #eee;
+}
+
+.active:hover{
+  background-color: #218838;
+  border-radius: 15px;
+}
+
 .carrito-container {
   width: 20%;
   display: flex;
@@ -236,6 +246,41 @@ button:hover {
   margin-top: 20px;
 }
 
+
+
+/* INICIO */
+.inicio-container{
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.box-one {
+  width: 50%;
+  align-items: center;
+}
+
+.box-one div{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.sec-img {
+  display: flex;
+    align-items: center;
+    width: 40%;
+    justify-content: center;
+}
+.sec-img img {
+  width: 60%;
+  border-radius: 1px;
+}
+
+
+/* PRODUCTOS */
+
 main {
   display: flex;
   flex-direction: column;
@@ -291,18 +336,10 @@ main article {
   display: flex;
   flex-direction: column;
   text-align: center;
-  padding: 25px;
+  padding: 25px; 
   gap: 50px;
 }
 
-.banner {
-    width: 100%;  
-    height: 40vh;
-    background-image: url('img/main/inicio.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
 
 /*footer */
 
@@ -338,3 +375,7 @@ footer div a {
   text-decoration: none;
   color: #A1EF00;
 }
+
+
+
+
